infra/envs/prod/k8s/helm/stacks/grafana/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: default
      namespace: gateway-system
      sectionName: https
  hostnames:
    - grafana.lkgiovani.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
